fix(button/radio-button): fix text not vertical align

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -93,6 +93,8 @@ button,
 }
 
 .role-multi-action {
+  display: inline-flex;
+  align-items: center;
   background: var(--accent-btn);
   border: solid thin var(--primary);
   color: var(--primary);
